fix: fix AuthModal styles in dark mode

--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -55,12 +55,28 @@
   }
 }
 
+.form-label {
+  color: var(--text-color);
+}
+
 .form-control:focus,
 .btn-close:focus,
 .btn-close:active {
   border-color: var(--primary-color);
   outline: 0;
   box-shadow: 0 0 0 0.25rem #f9dbcf;
+}
+
+html[data-theme='dark'] {
+  .form-control {
+    background-color: var(--light-color);
+  }
+
+  .form-control:focus,
+  .btn-close:focus,
+  .btn-close:active {
+    box-shadow: 0 0 0 0.25rem #f9dbcfb5;
+  }
 }
 
 .form-group {
